# cudaomp

clang/include/clang/Basic/: Cuda.h  DiagnosticDriverKinds.td  LangOptions.def
clang/include/clang/Driver/: Options.td
clang/lib/Basic/: TargetInfo.cpp
clang/lib/Basic/Targets/: X86.h
clang/lib/CodeGen/: CGCUDANV.cpp  CGOpenMPRuntimeGPU.cpp  CodeGenModule.cpp  TargetInfo.cpp
clang/lib/Driver/: Driver.cpp
clang/lib/Driver/ToolChains/: AMDGPUOpenMP.cpp  Clang.cpp  CommonArgs.cpp  CommonArgs.h  Cuda.cpp  Gnu.cpp
clang/lib/Frontend/: CompilerInvocation.cpp
clang/lib/Headers/: CMakeLists.txt  __clang_cuda_builtin_vars.h  __clang_cuda_intrinsics.h  __clang_cuda_math_forward_declares.h  __clang_cuda_runtime_wrapper.h
clang/lib/Headers/cuda_wrappers/: __openmp_cuda_host_wrapper.h  cuda.h  cuda_types.h  new
clang/lib/Headers/cuda_wrappers/cudaomp/: __clang_cuda_to_hip_builtin_vars.h  __openmp_cuda_device_wrapper.h  __openmp_cuda_host_wrapper.h  cuda.h  cuda_runtime_api.h  fatbinary_cuda.h  host_defines.h  internal_types.h  vector_functions.h  vector_functions.hpp  vector_types.h
clang/lib/Headers/openmp_wrappers/: __clang_openmp_math.h  __clang_openmp_math_forward_declares.h  math.h
clang/lib/Sema/: SemaCUDA.cpp
clang/test/Driver/: cuda-openmp-driver.cu
clang/test/Headers/: nvptx_device_cmath_functions.c  nvptx_device_cmath_functions.cpp  nvptx_device_cmath_functions_cxx17.cpp  nvptx_device_math_functions.c  nvptx_device_math_functions.cpp  nvptx_device_math_functions_cxx17.cpp
clang/tools/clang-linker-wrapper/: ClangLinkerWrapper.cpp
llvm/include/llvm/ADT/: Triple.h
llvm/include/llvm/Frontend/OpenMP/: OMPConstants.h  OMPGridValues.h  OMPKinds.def
llvm/lib/BinaryFormat/: Magic.cpp
llvm/lib/CodeGen/AsmPrinter/: AsmPrinter.cpp
llvm/lib/Object/: ObjectFile.cpp
llvm/lib/Support/: Triple.cpp
llvm/lib/Transforms/IPO/: OpenMPOpt.cpp
openmp/: CMakeLists.txt
openmp/libomptarget/: CMakeLists.txt
openmp/libomptarget/DeviceLib/: CMakeLists.txt
openmp/libomptarget/DeviceLib/include/: OpenMPMath.h
openmp/libomptarget/DeviceLib/include/Headers/: __clang_cuda_math.h  __clang_hip_libdevice_declares.h  __clang_hip_math.h
openmp/libomptarget/DeviceLib/src/: DeviceLibm.cpp  OpenMPMath.cpp
openmp/libomptarget/DeviceRTL/: CMakeLists.txt
openmp/libomptarget/DeviceRTL/include/: Mapping.h  ThreadEnvironment.h
openmp/libomptarget/DeviceRTL/src/: Debug.cpp  Mapping.cpp  Misc.cpp  Synchronization.cpp  Utils.cpp
openmp/libomptarget/deviceRTLs/common/src/: omp_math.cpp
openmp/libomptarget/deviceRTLs/nvptx/: CMakeLists.txt
openmp/libomptarget/include/: device.h  omptarget.h  omptargetplugin.h  rtl.h
openmp/libomptarget/plugins/: CMakeLists.txt  exports
openmp/libomptarget/plugins/amdgpu/src/: rtl.cpp
openmp/libomptarget/plugins/cuda/dynamic_cuda/: cuda.h
openmp/libomptarget/plugins/cuda/src/: rtl.cpp
openmp/libomptarget/plugins/vgpu/: CMakeLists.txt
openmp/libomptarget/plugins/vgpu/src/: ThreadEnvironment.cpp  ThreadEnvironment.h  ThreadEnvironmentImpl.cpp  ThreadEnvironmentImpl.h  rtl.cpp
openmp/libomptarget/src/: api.cpp  device.cpp  device.h  exports  interface.cpp  omptarget.cpp  private.h  rtl.cpp  rtl.h
openmp/libomptarget/test/: CMakeLists.txt
openmp/runtime/src/include/: omp.h.var
